--- a/github.html
+++ b/github.html
@@ -6,8 +6,8 @@
            <link rel="stylesheet" type="text/css" href="css/common.css">
   </head>
   <body>
-    <header>
-      <h1>Git練習用ページ</h1>
+    <header class="header">
+      <h1><a href="index.html">Git練習用ページ</a></h1>
     </header>
     <main>
       <nav>
